fix #125 - Improve collapsables style

--- a/app/styles/_trek-detail.scss
+++ b/app/styles/_trek-detail.scss
@@ -68,6 +68,9 @@
 		h2 {
 			margin-top: 0;
 			margin-bottom: 0;
+			background: none;
+			color: $primaryColor;
+			border-bottom: 3px solid $primaryColor;
 		}
 	}
 
@@ -79,7 +82,7 @@
 		font-size: 1.3rem;
 		line-height: 1.3rem;
 		vertical-align: middle;
-		color: white;
+		color: $primaryColor;
 		transition: transform ease-in-out 0.4s;
 		&.rotated {
 			transform: rotate(180deg);
